# sketches

./: .envrc  .gitignore  .rustfmt.toml  CLAUDE.md  LICENSE  README.md  fractals.code-workspace  sketches.code-workspace
notan_sketches/: Cargo.toml
notan_sketches/.cargo/: README.md
notan_sketches/docs/: bobas-nightmare.md  erratic_wave_shader.md  hilo_glitchy.md  hilo_smoove.md  radial_pointillist.md  schotter.md  schotter_anim.md  schotter_solid_v1.md  sierpinski_gasket.md  sierpinski_gasket_bushy.md  sierpinski_gasket_variation2.md
notan_sketches/examples/: bobas-nightmare.rs  caterpoellar.rs  claudes_first.rs  claudes_first_grid.rs  color_points_shader.rs  eg_aspect_fit.rs  eg_bezier.rs  eg_frag_shader.rs  eg_frag_shader_dbg.rs  eg_hot_reload_shader.rs  eg_mask.rs  eg_plot_shader.rs  eg_rapier.rs  eg_rapier_basic_sim.rs  eg_scaled_text.rs  eg_stretch_resize.rs  emo_bg_visualizer.rs  emo_proto_visualizer.rs  emo_simple_color.rs  erratic_wave_shader.rs  grid_demo.rs  grid_demo_simpler.rs  hilo_0.rs  hilo_1_reset.rs  hilo_2.rs  hilo_3.rs  hilo_4.rs  hilo_glitchy.rs  hilo_smoove.rs  hilostrips.rs  inner-teeth.rs  plot_shader.rs  radial.rs  radial_pointillist.rs  schotter.rs  schotter_anim.rs  schotter_solid_v1.rs  schotter_solid_v2.rs  shiftyufo.rs  sierpinski_gasket.rs  (+7 more)
notan_sketches/examples/assets/: lb_bronte01.json  lb_dickinson01.json  lb_dickinson02.json  lb_howe01.json  lb_hughes01.json  lb_teasdale01.json  lb_whitman01.json  seg.xcf  the_stagger.json  wilde01.json
notan_sketches/plans/: grid.md  inner-teeth-influence-points.md  smiley_gen.md
notan_sketches/src/: colors.rs  emotion.rs  emotion_bg_visualizer.rs  fractals.rs  gridutils.rs  lib.rs  mathutils.rs  schotter.rs  shaderutils.rs  utils.rs
notan_sketches/tests/: gridutils_test.rs
notan_sketches/www/: bobas-nightmare.html  eg_aspect_fit.html  eg_frag_shader.html  eg_notan.html  eg_stretch_resize.html  emo_bg_visualizer.html  emo_simple_color.html  erratic_wave_shader.html  hilo_smoove.html  radial_pointillist.html  schotter.html  schotter_anim.html  schotter_solid_v1.html  schotter_solid_v2.html  sierpinski_gasket.html  sierpinski_gasket_bushy.html
(+47 files in other folders)
