[package]
name = "notan_sketches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = { version = "0.8.0", features = ["extra", "text"] }
# notan = { git = "https://github.com/Nazariglez/notan.git", branch = "c/glutin", features = ["extra", "text"] }

rapier2d = "0.16.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
palette = "0.6.1"
