[package]
name = "notan_sketches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = { version = "0.12.1", features = [
    "links",
    "egui",
    "extra",
    "text",
    "texture_to_file",
] }
# notan = { git = "https://github.com/Nazariglez/notan.git", branch = "c/glutin", features = ["extra", "text"] }
# notan = { git = "https://github.com/Nazariglez/notan.git", branch = "f/wayland-nvidia", features = ["extra", "text", "nvidia-wayland"] }
rapier2d = "0.16.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
notan_touchy = { path = "../notan_touchy" }
palette = "0.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.60", features = ['Window', 'Document'] }
